# harness

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  bootstrap.html  changelog.html  code-generation.html  configuration.html  contributing.html  deployment.html  genindex.html  index.html  installation.html  objects.inv  package-lock.json  package.json  pi.yaml  py-modindex.html  pyproject.toml  reference.html  runtime.html  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  tox.ini  webpack.config.js  wires.html
.github/workflows/: check.yaml  deploy.yaml  release.yaml  site.yaml  test.yaml
_sources/: code-generation.rst.txt  deployment.rst.txt  index.rst.txt  reference.rst.txt  runtime.rst.txt
_static/: bootstrap.js  bootstrap.jsx  prism-protobuf.css  prism-protobuf.js  style.css  typeinfo.js
docs/: changelog.rst  code-generation.rst  conf.py  configuration.rst  contributing.rst  deployment.rst  http.proto.rst  index.rst  installation.rst  reference.rst  robots.txt  runtime.rst  sphinx_ext_changelog.py  sphinx_ext_protobuf.py  sphinx_ext_test.py  sphinx_ext_wire.py  wires.rst
example/: config.yaml  svc.proto  svc.py  svc_grpc.py  svc_pb2.py  svc_wires.py  svc_wires_prototype.py
harness/: grpc.html  http.html  logging.html  metrics.html  net.html  postgres.html  redis.html  tracing.html  wire.proto.html
python/: guide.html
requirements/: check.in  check.txt  docs.in  docs.txt  release.in  release.txt  setup.txt  test.in  test.txt  tox.txt
scripts/: gen.sh  google-proto-path  protoc-gen-reference  protoc-gen-typeinfo  release_check.sh
tests/: conftest.py  test_kube_gen.py  test_kubegen.py  test_plugin.py  test_protoc_gen_harness.py  test_runtime.py  test_runtime_utils.py  test_validate.py
validate/: validate.proto.html
(+185 files in other folders)
