[metadata]
name = harness
version = attr: harness.__version__
license = BSD-3-Clause
license_file = LICENSE.txt
description = Language-neutral meta-framework for server-less style services
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Vladimir Magamedov
author_email = vladimir@magamedov.com
url = https://github.com/vmagamedov/harness
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    protobuf
    pyyaml
    json-merge-patch
    jsonpatch
    opentelemetry-sdk==0.5b0

[options.packages.find]
where = src

[options.extras_require]
sdk =
    grpcio-tools

[options.entry_points]
console_scripts =
    protoc-gen-harness=harness.plugin.main:main
    harness=harness.cli.main:main

[tool:pytest]
addopts = -q --tb=native
testpaths = tests

[flake8]
exclude = .git,.tox,env,node_modules,*_pb2.py,*_grpc.py,*_wires.py,entrypoint.py
max_line_length = 88

[mypy]
mypy_path = src:examples/grpc
follow_imports = silent
[mypy-aiohttp.*]
ignore_missing_imports = true
[mypy-asyncpg.*]
ignore_missing_imports = true
[mypy-apscheduler.*]
ignore_missing_imports = true
[mypy-jsonpatch.*]
ignore_missing_imports = true
[mypy-json_merge_patch.*]
ignore_missing_imports = true
[mypy-opentelemetry.sdk.*]
ignore_missing_imports = true
[mypy-opentelemetry.propagators.*]
ignore_missing_imports = true
[mypy-grpc_tools.*]
ignore_missing_imports = true
